--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,3 +1,8 @@
 org.gradle.jvmargs=-Xmx4G -XX:+HeapDumpOnOutOfMemoryError
 android.useAndroidX=true
 android.enableJetifier=true
+
+systemProp.http.proxyHost=localhost
+systemProp.http.proxyPort=7897
+systemProp.https.proxyHost=localhost
+systemProp.https.proxyPort=7897
