--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   dio: ^5.7.0
   dio_http2_adapter: ^2.5.3
   go_router: ^14.2.7
+  just_audio: ^0.9.40
+  just_audio_windows: ^0.2.2
+  just_audio_media_kit: ^2.0.5
+  fftea: ^1.5.0+1
 
 dev_dependencies:
   flutter_test:
